--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/style.CSS">
+  <title>Matt FowlerFinn</title>
+</head>
+
+<body>
+  <div class="nav-wrapper">
+    <div class="nav title">MATT FOWLERFINN</div>
+    <div class="button nav" id="projects">PROJECTS</div>
+    <div class="spacer nav" id="spacer"></div>
+    <a href="https://github.com/mfowlerfinn" class="button nav" id="github" target="_blank"><img src="./assets/images/GitHub_Logo.png" ; height=24px; title="github"></a>
+  </div>
+  <div class="site-wrapper">
+    <div class="cards">
+      <!-- cards injected here -->
+    </div>
+  </div>
+</body>
+<script src="data.js"></script>
+<script src="cards.js"></script>
+<script src="handlers.js"></script>
+
+</html>
