--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
   <div class="nav-wrapper">
-    <div class="nav title">MATT FOWLERFINN</div>
-    <div class="button nav" id="projects">PROJECTS</div>
+    <div id="nav_title" class="nav">MATT FOWLERFINN</div>
+    <div class="nav" id="projects">PROJECTS</div>
     <div class="spacer nav" id="spacer"></div>
-    <a href="https://github.com/mfowlerfinn" class="button nav" id="github" target="_blank"><img src="./assets/images/GitHub_Logo.png" ; height=24px; title="github"></a>
+    <a href="https://github.com/mfowlerfinn" class="nav" id="github" target="_blank"><img src="./assets/images/GitHub_Logo.png" class="git" height=30px title="github"></a>
   </div>
   <div class="site-wrapper">
     <div class="cards">
@@ -21,6 +21,7 @@
     </div>
   </div>
 </body>
+<!-- given the constraints of hosting on github.io, I need to do all processing sans php or other backends -->
 <script src="data.js"></script>
 <script src="cards.js"></script>
 <script src="handlers.js"></script>
