minor style change

--- a/index.html
+++ b/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css" />
+    <title>Matt FowlerFinn</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/style.css">
-  <title>Matt FowlerFinn</title>
-</head>
-
-<body>
-  <div class="nav-wrapper">
-    <div id="nav_title" class="nav">MATT FOWLERFINN</div>
-    <div class="nav" id="projects">PROJECTS</div>
-    <div class="spacer nav" id="spacer"></div>
-    <a href="https://github.com/mfowlerfinn" class="nav" id="github" target="_blank"><img src="./assets/images/GitHub_Logo.png" class="git" height=30px title="github"></a>
-  </div>
-  <div class="site-wrapper">
-    <div class="cards">
-      <!-- cards injected here -->
+  <body>
+    <div class="nav-wrapper">
+      <div id="nav_title" class="nav">MATT FOWLERFINN</div>
+      <div class="nav" id="projects">PROJECTS</div>
+      <div class="spacer nav" id="spacer"></div>
+      <a
+        href="https://github.com/mfowlerfinn"
+        class="nav"
+        id="github"
+        target="_blank"
+        ><img
+          src="./assets/images/GitHub_Logo.png"
+          class="git"
+          height="30px"
+          title="github"
+      /></a>
     </div>
-  </div>
-</body>
-<!-- given the constraints of hosting on github.io, I need to do all processing sans php or other backends -->
-<script src="data.js"></script>
-<script src="cards.js"></script>
-<script src="handlers.js"></script>
-
+    <div class="site-wrapper">
+      <div class="cards">
+        <!-- cards injected here after rendering on client -->
+      </div>
+    </div>
+  </body>
+  <script src="data.js"></script>
+  <!-- project data to compile cards -->
+  <script src="cards.js"></script>
+  <!-- card constructor -->
+  <script src="handlers.js"></script>
 </html>
